--- a/src/BlBundle/Resources/views/Vues/article.html.twig
+++ b/src/BlBundle/Resources/views/Vues/article.html.twig
@@ -22,7 +22,7 @@
         <button class="btn btn-primary btn-danger" style="width: 500px; height: 30px">Supprimer cette fiche</button>
         <button class="btn btn-primary-blue" style="width: 500px; height: 30px">Modifier cette fiche</button>
         <button class="btn btn-primary btn-success" style="width: 1000px; height: 30px">Ajouter un nouvel article</button>
-        <button class="btn btn-primary" style="width: 1000px; height: 30px"><a href="{{ path('page1') }}">Revenir sur la page d'accueil</a></button>
+        <button class="btn btn-primary" style="width: 1000px; height: 30px"><a href="{{ path('accueil') }}">Revenir sur la page d'accueil</a></button>
     </div>
 {% endblock %}
 
@@ -40,5 +40,3 @@
 
     </style>
 {% endblock %}
-
-
