--- a/src/BlBundle/Resources/views/Vues/bllist.html.twig
+++ b/src/BlBundle/Resources/views/Vues/bllist.html.twig
@@ -31,7 +31,7 @@
             {% for bls in bl %}
                 <tr>
                     <td>{{ bls.dateBl.format('j, M Y h:m') }}</td>
-                    <th scope="row"><a href="{{ path('blprint', {'id':bls.id }) }}">{{ bls.id }}</a></th>
+                    <th scope="row"><a href="{{ path('blconsult', {'id':bls.id }) }}">{{ bls.id }}</a></th>
                     <td>{{ bls.descriptionBl }}</td>
                     <td>{{ bls.clientBl }}</td>
                     <td>{{ bls.societeBl }}</td>
