--- a/src/BlBundle/Resources/views/Vues/factures.html.twig
+++ b/src/BlBundle/Resources/views/Vues/factures.html.twig
@@ -148,8 +148,7 @@
                 {{ form_end(form) }}
             </div>
 
-            <a href="{{ path('bl') }}"><button class="btn btn-primary" style="width: 300px; height: 60px">Modifier</button></a>
-            <a href="{{ path('accueil') }}"><button class="btn btn-danger" style="width: 300px; height: 60px">Annuler</button></a>
+            <a href="{{ path('accueil') }}"><button class="btn btn-danger" style="width: 300px; height: 60px">RETOUR ACCUEIL</button></a>
         </div>
         </div>
 
