CRUD articles clients et transporteurs ok

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -23,7 +23,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script   src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
 {% block header %}
-    <img src="{{ asset('logo1lfb.jpg') }}" alt="" style="width: 20%">
+    <img src="{{ asset('logo1lfb.png') }}" alt="" style="width: 20%">
 {% endblock %}
     {#IMPORTANT#}
     {#!!!  BOOTSTRAP FONCTIONNE ICI AVEC LE CDN MAIS IL FAUT IMPERATIVEMENT LE REPASSER AVEC LE FICHIER LIÉ#}
