--- a/app/Resources/views/articles/index.html.twig
+++ b/app/Resources/views/articles/index.html.twig
@@ -10,8 +10,8 @@
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Codeart</th>
-                <th>Libelleart</th>
+                <th>Code</th>
+                <th>Libellé</th>
                 <th>Familleart</th>
                 <th>Prixhtart</th>
                 <th>Prixttcart</th>
