--- a/app/Resources/views/clients/index.html.twig
+++ b/app/Resources/views/clients/index.html.twig
@@ -7,7 +7,7 @@
         <ul>
           <div>
               <a href="{{ path('clients_new') }}"><button class="btn btn-primary" type="button" name="button">Ajouter un nouveau Client</button></a>
-              <a href="{{ path('clients_index') }}"><button class="btn btn-info" type="button" name="button">Revenir sur la liste</button></a>
+              <a href="{{ path('archives') }}"><button class="btn btn-info" type="button" name="button">Revenir au menu précédent</button></a>
           </div>
         </ul>
       <table class="table table-bordered">
