--- a/app/Resources/views/articles/show.html.twig
+++ b/app/Resources/views/articles/show.html.twig
@@ -5,48 +5,46 @@
     <h1>ARTICLE</h1>
     <div class="well">
     </div>
-    <table>
+    <table class="table table-bordered">
         <tbody>
             <tr>
                 <th>Id</th>
                 <td>{{ article.id }}</td>
             </tr>
             <tr>
-                <th>Codeart</th>
+                <th>Code Article</th>
                 <td>{{ article.codeArt }}</td>
             </tr>
             <tr>
-                <th>Libelleart</th>
+                <th>Libellé</th>
                 <td>{{ article.libelleArt }}</td>
             </tr>
             <tr>
-                <th>Familleart</th>
+                <th>Famille</th>
                 <td>{{ article.familleArt }}</td>
             </tr>
             <tr>
-                <th>Prixhtart</th>
+                <th>Prix HT</th>
                 <td>{{ article.prixHTArt }}</td>
             </tr>
             <tr>
-                <th>Prixttcart</th>
+                <th>Prix TTC</th>
                 <td>{{ article.prixTTCArt }}</td>
             </tr>
         </tbody>
     </table>
-
-    <ul>
-        <li>
-            <a href="{{ path('articles_index') }}">Revenir à la liste</a>
-        </li>
-        <li>
-            <a href="{{ path('articles_edit', { 'id': article.id }) }}">Modifier</a>
-        </li>
-        <li>
+    <div class="">
+    <a href="{{ path('articles_edit', { 'id': article.id }) }}"><button class="btn btn-primary"type="button" name="button">Modifier</button></a>
+    </div>
+    <br>
+    <div>
             {{ form_start(delete_form) }}
                 <input class="btn btn-danger" type="submit" value="Supprimer">
             {{ form_end(delete_form) }}
-        </li>
-    </ul>
+    </div>
+    <br>
+    <a href="{{ path('clients_index') }}"><button class="btn btn-info" type="button" name="button">Revenir sur la liste</button></a>
+
   </div>
 </div>
 </div>
