factures en cours

--- a/app/Resources/views/articles/edit.html.twig
+++ b/app/Resources/views/articles/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="container">
-<h1>Article edit</h1>
+<h1>Modifier un Article</h1>
 <div class="well">
     <div class="">
       {{ form_start(edit_form) }}
