--- a/app/Resources/views/articles/index.html.twig
+++ b/app/Resources/views/articles/index.html.twig
@@ -9,12 +9,12 @@
       <table class="table table-bordered">
         <thead>
             <tr>
-                <th>Id</th>
+                <th>N.</th>
                 <th>Code</th>
                 <th>Libellé</th>
-                <th>Familleart</th>
-                <th>Prixhtart</th>
-                <th>Prixttcart</th>
+                <th>Famille</th>
+                <th>Prix HT</th>
+                <th>Prix TTC</th>
                 <th>Actions</th>
             </tr>
         </thead>
