--- a/app/Resources/views/articles/show.html.twig
+++ b/app/Resources/views/articles/show.html.twig
@@ -39,7 +39,7 @@
     <br>
     <div>
             {{ form_start(delete_form) }}
-                <input class="btn btn-danger" type="submit" value="Supprimer">
+                <input class="btn btn-danger" type="submit" value="Supprimer cet article">
             {{ form_end(delete_form) }}
     </div>
     <br>
