--- a/app/Resources/views/clients/edit.html.twig
+++ b/app/Resources/views/clients/edit.html.twig
@@ -13,7 +13,7 @@
         <br>
         <div>
             {{ form_start(delete_form) }}
-                <input class="btn btn-danger" type="submit" value="Supprimer">
+                <input class="btn btn-danger" type="submit" value="Supprimer cette fiche">
             {{ form_end(delete_form) }}
         </div>
         <br>
