--- a/app/Resources/views/clients/show.html.twig
+++ b/app/Resources/views/clients/show.html.twig
@@ -106,7 +106,7 @@
     <br>
     <div class="">
       {{ form_start(delete_form) }}
-                <input class="btn btn-danger" type="submit" value="Supprimer">
+                <input class="btn btn-danger" type="submit" value="Supprimer cette fiche">
       {{ form_end(delete_form) }}
     </div>
     <br>
