--- a/src/BlBundle/Resources/views/Vues/blprint.html.twig
+++ b/src/BlBundle/Resources/views/Vues/blprint.html.twig
@@ -45,7 +45,7 @@
                         <th scope="row">{{ bl.id }}</th>
                         <!-- <td>{{ bl.dateBl.format('j M Y H:i') }}</td> -->
                         <!-- j'affiche la date du jour, mais au besoin pour une date bl ciblée, décommenter ci-dessus -->
-                        <td>{{ "now"|date(' d m Y | H:i') }}</td>
+                        <td>{{ "now"|date(' d m Y ') }}</td>
                         <td>{{ bl.descriptionBl }}</td>
                         <td>{{ bl.clientBl }}</td>
                         <td>{{ bl.societeBl }}</td>
